--- a/modal.html
+++ b/modal.html
@@ -37,7 +37,7 @@
         <div class="modal-dialog custom-modal">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                    <h5 class="modal-title" id="exampleModalLabel">Request Details</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body p-2">
@@ -96,16 +96,16 @@
                                         <td><img src="images/user.png" height="100%"></td>
                                     </tr>
                                     <tr align="center">
-                                        <td>Name</td>
-                                        <td>Name</td>
-                                        <td>Name</td>
-                                        <td>Name</td>
+                                        <td>Manager <br> Name:</td>
+                                        <td>Technician <br> Name:</td>
+                                        <td>Supervisor <br> Name:</td>
+                                        <td>Manager <br> Name:</td>
                                     </tr>
                                     <tr align="center">
-                                        <td>Date</td>
-                                        <td>Date</td>
-                                        <td>Date</td>
-                                        <td>Date</td>
+                                        <td>Date Approved: </td>
+                                        <td>Date Start: <br> Date Accomplsh: </td>
+                                        <td>Date Approved: </td>
+                                        <td>Date Approved: </td>
                                     </tr>
                                 </table>
                             </td>
@@ -136,10 +136,10 @@
                                     </tr>
                                     <tr align="center">
                                         <td>Name</td>
-                                        <td>Name</td>
+                                        <td>Manager <br> Name</td>
                                     </tr>
                                     <tr align="center">
-                                        <td>Date</td>
+                                        <td>Date Approved: </td>
                                         <td>Date</td>
                                     </tr>
                                 </table>
@@ -237,16 +237,16 @@
                             <td><img src="images/user.png" height="100%"></td>
                         </tr>
                         <tr align="center">
-                            <td>Name</td>
-                            <td>Name</td>
-                            <td>Name</td>
-                            <td>Name</td>
+                            <td>Manager <br> Name:</td>
+                            <td>Technician <br> Name:</td>
+                            <td>Supervisor <br> Name:</td>
+                            <td>Manager <br> Name:</td>
                         </tr>
                         <tr align="center">
-                            <td>Date</td>
-                            <td>Date</td>
-                            <td>Date</td>
-                            <td>Date</td>
+                            <td>Date Approved: </td>
+                            <td>Date Start: <br> Date Accomplsh: </td>
+                            <td>Date Approved: </td>
+                            <td>Date Approved: </td>
                         </tr>
                     </table>
                 </td>
@@ -277,10 +277,10 @@
                         </tr>
                         <tr align="center">
                             <td>Name</td>
-                            <td>Name</td>
+                            <td>Manager <br> Name</td>
                         </tr>
                         <tr align="center">
-                            <td>Date</td>
+                            <td>Date Approved: </td>
                             <td>Date</td>
                         </tr>
                     </table>
